[project]
name = "airdancer-slack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "slack-bolt>=1.23.0",
    "slack-cli-hooks>=0.1.0",
    "paho-mqtt>=2.1.0",
    "pony>=0.7.16",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.uv.sources]
pony = { git = "https://github.com/larsks/pony", rev = "feat/py313" }
